--- a/index.htm
+++ b/index.htm
@@ -25,8 +25,8 @@
 			<div id="loveHeart">
 				<div id="words">
 					<div id="messages">
-						<!-- 亲爱的，这是我们相爱在一起的时光。 -->
-						这是一个计时器，看住时间
+						<p>看住时间，别让她在流浪</p>
+						<p>亲爱的，看我们都认识这么久了</p>
 						<div id="elapseClock">
 							<span class="digit">306</span> days 
 							<span class="digit">02</span> hours 
