--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HTML5</title>
+<title>TRUE LOVE</title>
 
 <style type="text/css">
 /*@font-face {
@@ -12,7 +12,7 @@
 }*/
 .source-url{font-size:15px;text-align:center}
 </style>
-
+<link rel="shortcut icon" href="images/fang.png">
 <link href="css/default.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/functions.js"></script>
